fixed text wrapping

--- a/clmanager/src/main/java/net/deuce/clmanager/gwt/main/public/Main.css
+++ b/clmanager/src/main/java/net/deuce/clmanager/gwt/main/public/Main.css
@@ -1,29 +1,8 @@
 .my-border-layout {
 }
 
-.mail-item-detail {
-  background-color: #E8EAEC;
-  border-bottom: 1px solid silver;
-}
-
-.mail-item-detail h1 {
-  font-weight: bold;
-  font-size: 14px;
-  padding: 5 0 2 5px;
-}
-
-.mail-item-detail h2 {
+.postView-body {
+  line-height: 150%;
+  padding: 20px 40px 20px 10px;
   font-size: 12px;
-  font-weight: normal;
-  padding: 0 5 0 5px;
-}
-
-.mail-item-detail h3 {
-  font-size: 12px;
-  font-weight: normal;
-  padding: 0 5 5 5px;
-}
-
-.mail-item-body {
-  padding: 12px;
 }
